@@ -4,6 +4,7 @@
 \alias{makePlot}
 \alias{test}
 \alias{testSim}
+\alias{toFileDisProg}
 \description{
   The functions listed here are no longer part of \pkg{surveillance}.
 }
@@ -15,6 +16,8 @@ test(data = c("k1", "m5"), range = 157:339)
 testSim(p = 0.99, r = 0.01, length = 400, A = 1, alpha = 1,
         beta = 0, phi = 0, frequency = 1, state = NULL, K, 
         range = 200:400)
+
+toFileDisProg(disProgObj, toFile)
 }
 \details{
   The ancient test function \code{makePlot} is no longer used,
@@ -22,6 +25,11 @@ testSim(p = 0.99, r = 0.01, length = 400, A = 1, alpha = 1,
   SurvStat datasets can be found in \code{vignette("surveillance")},
   and \code{testSim} is provided as an example
   in \code{help("\link{sim.pointSource}")}.
+
+  Functions related to the old \code{"\link[=create.disProg]{disProg}"}
+  class are no longer needed. The effect of \code{toFileDisProg} could
+  still be achieved via \code{\link{write.table}} of
+  \code{as.data.frame(disProg2sts(disProgObj))[c("epoch", "observed", "state")]}.
 }
 \seealso{
   \code{\link{Defunct}}
